--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -409,7 +409,38 @@
       "key_file_name":"اسم ملف المفتاح",
       "key_file_name_required":"اسم ملف المفتاح مطلوب",
       "hash_key":"مفتاح التجزئة",
-      "hash_key_required":"مفتاح التجزئة مطلوب"
+      "hash_key_required":"مفتاح التجزئة مطلوب",
+      "public_key":" المفتاح العام",
+      "public_key_required":"المفتاح العام مطلوب",
+      "encryption_key":"مفتاح التشفير",
+      "encryption_key_required":"مفتاح التشفير مطلوب",
+      "client_email":"البريد الإلكتروني للعميل",
+      "client_email_required":"البريد الإلكتروني للعميل مطلوب",
+      "client_phone":"رقم هاتف العميل",
+      "client_phone_required":"رقم هاتف العميل مطلوب",
+      "client_phone_invalid":"رقم هاتف العميل غير صالح",
+      "access_key":"مفتاح الوصول",
+      "access_key_required":"مفتاح الوصول مطلوب",
+      "profile_id":"معرّف الملف الشخصي",
+      "profile_id_required":"معرّف الملف الشخصي مطلوب",
+      "merchant_define_data3":"بيانات تعريف التاجر 3",
+      "merchant_define_data3_required":"بيانات تعريف التاجر 3 مطلوبة",
+      "multi_currency":"متعدد العملات",
+      "dual_currency":"عملة مزدوجة",
+      "client_user_id":"معرّف مستخدم العميل",
+      "client_user_id_required":"معرّف مستخدم العميل مطلوب",
+      "client_password":"كلمة مرور العميل",
+      "client_password_required":"كلمة مرور العميل مطلوبة",
+      "private_key":"المفتاح الخاص",
+      "private_key_required":"المفتاح الخاص مطلوب",
+      "key_id":"معرّف المفتاح",
+      "key_id_required":"معرّف المفتاح مطلوب",
+      "shared_secret":"المفتاح المشترك",
+      "shared_secret_required":"المفتاح المشترك مطلوب",
+      "payment_type":"نوع الدفع",
+      "payment_type_required":"نوع الدفع مطلوب",
+      "card_network":"شبكة البطاقة",
+      "card_network_required":"شبكة البطاقة مطلوبة"
     }
   },
   "payment-providers_snackbar": {
@@ -424,7 +455,11 @@
     "ccbill_settings_saved": "تم حفظ إعدادات سي سي بيل بنجاح",
     "checkout_com_settings_saved": "تم حفظ إعدادات تشاك آوت بنجاح",
     "city_bank_settings_saved": "تم حفظ إعدادات سيتي بنك بنجاح",
-    "easy_paisa_settings_saved": "تم حفظ إعدادات Easy Paisa بنجاح"
+    "easy_paisa_settings_saved": "تم حفظ إعدادات Easy Paisa بنجاح",
+    "flutterwave_settings_saved": "تم حفظ إعدادات Flutterwave بنجاح",
+    "hbl_settings_saved": "تم حفظ إعدادات HBL بنجاح",
+    "hbl_hosted_settings_saved": "تم حفظ إعدادات HBL مستضاف بنجاح",
+    "hbl_unified_checkout_settings_saved": "تم حفظ إعدادات HBL تسجيل خروج موحد بنجاح"
   },
   "$vuetify": {
     "open": "فتح",
