--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -409,7 +409,38 @@
       "key_file_name":" Key File Name",
       "key_file_name_required":" Key File Name is required",
       "hash_key":"Hash Key",
-      "hash_key_required":"Hash Key is required"
+      "hash_key_required":"Hash Key is required",
+      "public_key":" Public Key",
+      "public_key_required":" Public Key is required",
+      "encryption_key":"Encryption Key",
+      "encryption_key_required":"Encryption Key is required",
+      "client_email":"Client Email",
+      "client_email_required":"Client Email is required",
+      "client_phone":"Client Phone",
+      "client_phone_required":"Client Phone is required",
+      "client_phone_invalid":"Client Phone is invalid",
+      "access_key":"Access Key",
+      "access_key_required":"Access Key is required",
+      "profile_id":"Profile ID",
+      "profile_id_required":"Profile ID is required",
+      "merchant_define_data3":"Merchant Define Data3",
+      "merchant_define_data3_required":"Merchant Define Data3 is required",
+      "multi_currency":"Multi Currency",
+      "dual_currency":"Dual Currency",
+      "client_user_id":"Client User ID",
+      "client_user_id_required":"Client User ID is required",
+      "client_password":"Client Password",
+      "client_password_required":"Client Password is required",
+      "private_key":"Private Key",
+      "private_key_required":"Private Key is required",
+      "key_id":"Key ID",
+      "key_id_required":"Key ID is required",
+      "shared_secret":"Shared Secret",
+      "shared_secret_required":"Shared Secret is required",
+      "payment_type":"Payment Type",
+      "payment_type_required":"Payment Type is required",
+      "card_network":"Card Network",
+      "card_network_required":"Card Network is required"
     }
   },
   "payment-providers_snackbar": {
@@ -424,7 +455,11 @@
     "ccbill_settings_saved": "CCBILL settings saved successfully",
     "checkout_com_settings_saved": "Checkout.com settings saved successfully",
     "city_bank_settings_saved": "City Bank settings saved successfully",
-    "easy_paisa_settings_saved": "Easy Paisa settings saved successfully"
+    "easy_paisa_settings_saved": "Easy Paisa settings saved successfully",
+    "flutterwave_settings_saved": "Flutterwave settings saved successfully",
+    "hbl_settings_saved": "HBL settings saved successfully",
+    "hbl_hosted_settings_saved": "HBL Hosted settings saved successfully",
+    "hbl_unified_checkout_settings_saved": "HBL Unified Checkout settings saved successfully"
   },
   "$vuetify": {
     "open": "Open",
