--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -409,7 +409,38 @@
       "key_file_name":"Nom du fichier de clé",
       "key_file_name_required":"Le nom du fichier de clé est requis",
       "hash_key":"Clé de hachage",
-      "hash_key_required":"La clé de hachage est requise"
+      "hash_key_required":"La clé de hachage est requise",
+      "public_key":" Clé publique",
+      "public_key_required":"La clé publique est requise",
+      "encryption_key":"Clé de chiffrement",
+      "encryption_key_required":"La clé de chiffrement est requise",
+      "client_email":"Email du client",
+      "client_email_required":"L'email du client est requis",
+      "client_phone":"Téléphone du client",
+      "client_phone_required":"Le téléphone du client est requis",
+      "client_phone_invalid":"Le téléphone du client est invalide",
+      "access_key":"Clé d'accès",
+      "access_key_required":"La clé d'accès est requise",
+      "profile_id":"ID de profil",
+      "profile_id_required":"L'ID de profil est requis",
+      "merchant_define_data3":"Merchant Define Data3",
+      "merchant_define_data3_required":"Merchant Define Data3 est requis",
+      "multi_currency":"Multi-devises",
+      "dual_currency":"Double devise",
+      "client_user_id":"ID utilisateur client",
+      "client_user_id_required":"L'ID utilisateur client est requis",
+      "client_password":"Mot de passe client",
+      "client_password_required":"Le mot de passe client est requis",
+      "private_key":"Clé privée",
+      "private_key_required":"La clé privée est requise",
+      "key_id":"ID de clé",
+      "key_id_required":"L'ID de clé est requis",
+      "shared_secret":"Secret partagé",
+      "shared_secret_required":"Le secret partagé est requis",
+      "payment_type":"Type de paiement",
+      "payment_type_required":"Le type de paiement est requis",
+      "card_network":"Réseau de carte",
+      "card_network_required":"Le réseau de carte est requis"
     }
   },
   "payment-providers_snackbar": {
@@ -424,7 +455,11 @@
     "ccbill_settings_saved": "Paramètres CCBILL enregistrés avec succès",
     "checkout_com_settings_saved": "Paramètres Checkout.com enregistrés avec succès",
     "city_bank_settings_saved": "Paramètres City Bank enregistrés avec succès",
-    "easy_paisa_settings_saved": "Paramètres Easy Paisa enregistrés avec succès"
+    "easy_paisa_settings_saved": "Paramètres Easy Paisa enregistrés avec succès",
+    "flutterwave_settings_saved": "Paramètres Flutterwave enregistrés avec succès",
+    "hbl_settings_saved": "Paramètres HBL enregistrés avec succès",
+    "hbl_hosted_settings_saved": "Paramètres HBL Hosted enregistrés avec succès",
+    "hbl_unified_checkout_settings_saved": "Paramètres HBL Unified Checkout enregistrés avec succès"
   },
   "$vuetify": {
     "open": "Ouvrir",
