--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -340,6 +340,8 @@
       "merchant_key1": "Clé du marchand 1",
       "merchant_key1_required": "La clé du marchand 1 est requise",
       "merchant_key2": "Clé du marchand 2",
+      "merchant_key": "Clé du marchand",
+      "merchant_key_required": "La clé du marchand est requise",
       "api_username": "Nom d'utilisateur API",
       "api_username_required": "Le nom d'utilisateur API est requis",
       "merchant_key2_required": "La clé du marchand 2 est requise",
@@ -457,7 +459,21 @@
       "client_secret_key":"Clé secrète client",
       "client_secret_key_required":"La clé secrète client est requise",
       "integrity_salt":"Sel d'intégrité",
-      "integrity_salt_required":"Le sel d'intégrité est requis"
+      "integrity_salt_required":"Le sel d'intégrité est requis",
+      "url_endpoint":"Point de terminaison URL",
+      "url_endpoint_required":"Le point de terminaison URL est requis",
+      "publishable_key":"Clé publiable",
+      "publishable_key_required":"La clé publiable est requise",
+      "partner_id":"ID du partenaire",
+      "partner_id_required":"L'ID du partenaire est requis",
+      "authorization_token":"Jeton d'autorisation",
+      "authorization_token_required":"Le jeton d'autorisation est requis",
+      "outlet_reference":"Référence du point de vente",
+      "outlet_reference_required":"La référence du point de vente est requise",
+      "sub_merchant_id":"ID du sous-marchand",
+      "sub_merchant_id_required":"L'ID du sous-marchand est requis",
+      "merchant_version":"Version du marchand",
+      "merchant_version_required":"La version du marchand est requise"
     }
   },
   "payment-providers_snackbar": {
@@ -482,7 +498,15 @@
     "direct_pay_settings_saved": "Paramètres Direct Pay enregistrés avec succès",
     "dialog_pay_settings_saved": "Paramètres Dialog Pay enregistrés avec succès",
     "save_zerocash_settings_saved": "Paramètres Zerocash enregistrés avec succès",
-    "jazz_cash_settings_saved": "Paramètres Jazz Cash enregistrés avec succès"
+    "jazz_cash_settings_saved": "Paramètres Jazz Cash enregistrés avec succès",
+    "keenu_settings_saved": "Paramètres Keenu enregistrés avec succès",
+    "mcb_settings_saved": "Paramètres MCB enregistrés avec succès",
+    "meezan_settings_saved": "Paramètres Meezan enregistrés avec succès",
+    "moyasar_settings_saved": "Paramètres Moyasar enregistrés avec succès",
+    "mypay_settings_saved": "Paramètres MyPay enregistrés avec succès",
+    "neem_settings_saved": "Paramètres NEEM enregistrés avec succès",
+    "network_international_settings_saved": "Paramètres Network International enregistrés avec succès",
+    "nift_settings_saved": "Paramètres NIFT enregistrés avec succès"
   },
   "$vuetify": {
     "open": "Ouvrir",
