all provider added

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -488,7 +488,33 @@
       "instalment_plan_required":"خطة التقسيط مطلوبة",
       "instalment":"التقسيط",
       "no_of_installment":"عدد الأقساط",
-      "no_of_installment_required":"عدد الأقساط مطلوب"
+      "no_of_installment_required":"عدد الأقساط مطلوب",
+      "server_key":"مفتاح الخادم",
+      "server_key_required":"مفتاح الخادم مطلوب",
+      "client_key":"مفتاح العميل",
+      "client_key_required":"مفتاح العميل مطلوب",
+      "app_key":"مفتاح التطبيق",
+      "app_key_required":"مفتاح التطبيق مطلوب",
+      "sid":"SID",
+      "sid_required":"SID مطلوب",
+      "sandbox_api_key":"مفتاح Sandbox API",
+      "sandbox_api_key_required":"مفتاح Sandbox API مطلوب",
+      "sandbox_secret_key":"مفتاح Sandbox Secret",
+      "sandbox_secret_key_required":"مفتاح Sandbox Secret مطلوب",
+      "production_secret_key":"مفتاح Production Secret",
+      "production_secret_key_required":"مفتاح Production Secret مطلوب",
+      "production_api_key":"مفتاح Production API",
+      "production_api_key_required":"مفتاح Production API مطلوب",
+      "publication_key":"مفتاح النشر",
+      "publication_key_required":"مفتاح النشر مطلوب",
+      "customer_data":"بيانات العميل",
+      "customer_data_required":"بيانات العميل مطلوبة",
+      "terminal_information":"معلومات الطرف الطرفي",
+      "terminal_information_required":"معلومات الطرف الطرفي مطلوبة",
+      "terminal_name":"اسم الطرف الطرفي",
+      "terminal_name_required":"اسم الطرف الطرفي مطلوب",
+      "store_name":"اسم المتجر",
+      "store_name_required":"اسم المتجر مطلوب"
     }
   },
   "payment-providers_snackbar": {
@@ -528,7 +554,14 @@
     "paypro_settings_saved": "تم حفظ إعدادات PayPro بنجاح",
     "paystack_settings_saved": "تم حفظ إعدادات PAYSTACK بنجاح",
     "rapyd_settings_saved": "تم حفظ إعدادات Rapyd بنجاح",
-    "tabpay_settings_saved": "تم حفظ إعدادات TabPay بنجاح"
+    "tabpay_settings_saved": "تم حفظ إعدادات TabPay بنجاح",
+    "paytab_settings_saved":"تم حفظ إعدادات PAYTAB بنجاح",
+    "tbc_settings_saved": "تم حفظ إعدادات TBC بنجاح",
+    "swich_settings_saved": "تم حفظ إعدادات SWICH بنجاح",
+    "walee_settings_saved":"تم حفظ إعدادات Walee بنجاح",
+    "safepay_settings_saved":"تم حفظ إعدادات Safepay بنجاح",
+    "stripe_settings_saved": "تم حفظ إعدادات Stripe بنجاح",
+    "ubl_settings_saved": "تم حفظ إعدادات UBL بنجاح"
   },
   "$vuetify": {
     "open": "فتح",
