--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -488,7 +488,33 @@
       "instalment_plan_required":"Instalment Plan is required",
       "instalment":"instalment",
       "no_of_installment":"No of Installment",
-      "no_of_installment_required":"No of Installment is required"
+      "no_of_installment_required":"No of Installment is required",
+      "server_key":"Server Key",
+      "server_key_required":"Server Key is required",
+      "client_key":"Client Key",
+      "client_key_required":"Client Key is required",
+      "app_key":"App Key",
+      "app_key_required":"App Key is required",
+      "sid":"SID",
+      "sid_required":"SID is required",
+      "sandbox_api_key":"Sandbox API Key",
+      "sandbox_api_key_required":"Sandbox API Key is required",
+      "sandbox_secret_key":"Sandbox Secret Key",
+      "sandbox_secret_key_required":"Sandbox Secret Key is required",
+      "production_secret_key":"Production Secret Key",
+      "production_secret_key_required":"Production Secret Key is required",
+      "production_api_key":"Production API Key",
+      "production_api_key_required":"Production API Key is required",
+      "publication_key":"Publication Key",
+      "publication_key_required":"Publication Key is required",
+      "customer_data":"Customer Data",
+      "customer_data_required":"Customer Data is required",
+      "terminal_information":"Terminal Information",
+      "terminal_information_required":"Terminal Information is required",
+      "terminal_name":"Terminal Name",
+      "terminal_name_required":"Terminal Name is required",
+      "store_name":"Store Name",
+      "store_name_required":"Store Name is required"
     }
   },
   "payment-providers_snackbar": {
@@ -528,7 +554,14 @@
     "paypro_settings_saved": "PayPro settings saved successfully",
     "paystack_settings_saved": "PAYSTACK settings saved successfully",
     "rapyd_settings_saved": "Rapyd settings saved successfully",
-    "tabpay_settings_saved": "TabPay Payments settings saved successfully"
+    "tabpay_settings_saved": "TabPay Payments settings saved successfully",
+    "paytab_settings_saved":"PAYTAB settings saved successfully",
+    "tbc_settings_saved": "TBC settings saved successfully",
+    "swich_settings_saved": "SWICH settings saved successfully",
+    "walee_settings_saved":" Walee settings saved successfully",
+    "safepay_settings_saved":"Safepay settings saved successfully",
+    "stripe_settings_saved": "Stripe settings saved successfully",
+    "ubl_settings_saved": "UBL settings saved successfully"
   },
   "$vuetify": {
     "open": "Open",
