--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -488,7 +488,33 @@
       "instalment_plan_required":"Le plan de versements est requis",
       "instalment":"versement",
       "no_of_installment":"Nombre de versements",
-      "no_of_installment_required":"Le nombre de versements est requis"
+      "no_of_installment_required":"Le nombre de versements est requis",
+      "server_key":"Clé du serveur",
+      "server_key_required":"La clé du serveur est requise",
+      "client_key":"Clé client",
+      "client_key_required":"La clé client est requise",
+      "app_key":"Clé de l'application",
+      "app_key_required":"La clé de l'application est requise",
+      "sid":"SID",
+      "sid_required":"SID est requis",
+      "sandbox_api_key":"Clé API Sandbox",
+      "sandbox_api_key_required":"La clé API Sandbox est requise",
+      "sandbox_secret_key":"Clé secrète Sandbox",
+      "sandbox_secret_key_required":"La clé secrète Sandbox est requise",
+      "production_secret_key":"Clé secrète de production",
+      "production_secret_key_required":"La clé secrète de production est requise",
+      "production_api_key":"Clé API de production",
+      "production_api_key_required":"La clé API de production est requise",
+      "publication_key":"Clé de publication",
+      "publication_key_required":"La clé de publication est requise",
+      "customer_data":"Données client",
+      "customer_data_required":"Les données client sont requises",
+      "terminal_information":"Informations sur le terminal",
+      "terminal_information_required":"Les informations sur le terminal sont requises",
+      "terminal_name":"Nom du terminal",
+      "terminal_name_required":"Le nom du terminal est requis",
+      "store_name":"Nom du magasin",
+      "store_name_required":"Le nom du magasin est requis"
     }
   },
   "payment-providers_snackbar": {
@@ -528,7 +554,14 @@
     "paypro_settings_saved": "Paramètres PayPro enregistrés avec succès",
     "paystack_settings_saved": "Paramètres PAYSTACK enregistrés avec succès",
     "rapyd_settings_saved": "Paramètres Rapyd enregistrés avec succès",
-     "tabpay_settings_saved": "Paramètres TabPay enregistrés avec succès"
+    "tabpay_settings_saved": "Paramètres TabPay enregistrés avec succès",
+    "paytab_settings_saved":"Paramètres PAYTAB enregistrés avec succès",
+    "tbc_settings_saved": "Paramètres TBC enregistrés avec succès",
+    "swich_settings_saved": "Paramètres SWICH enregistrés avec succès",
+    "walee_settings_saved":" Paramètres Walee enregistrés avec succès",
+    "safepay_settings_saved":"Paramètres Safepay enregistrés avec succès",
+    "stripe_settings_saved": "Paramètres Stripe enregistrés avec succès",
+    "ubl_settings_saved": "Paramètres UBL enregistrés avec succès"
   },
   "$vuetify": {
     "open": "Ouvrir",
